test/semantic_errors/invalid_declaration5.mc
bool f = false;

void main() {
    int b = f; /* assignment of bool to a int */
}